--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -32,14 +32,25 @@ html * {
     margin: 0;
 }
 
+
 body {
-    background: #ffffff;
-    color: #333333;
-    overflow-x: hidden; /* prevents box-shadow causing a horizontal scrollbar in firefox when viewport < 960px wide */
-    -moz-box-shadow: 0 0 0.3em #4D8618;
-    -webkit-box-shadow: 0 0 0.3em #4D8618;
-    box-shadow: 0 0 0.3em #4D8618;
+    background-color: #f2f2f2;
+
+    background-repeat: no-repeat;
+    background-position: center top;
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100%;
+    width: 100% ;
+
+
+
+
+
 }
+
+
+
 
 #grailsLogo {
     background-color: #abbf78;
@@ -61,6 +72,8 @@ ul {
 
 img {
     border: 0;
+    max-width: 100%;
+    height: auto;
 }
 
 /* GENERAL */
@@ -69,14 +82,107 @@ img {
     display: inline-block;
     margin: 1em;
 }
-
 .content {
+
+
+}
+.titulo{
+    content: "";
+
+    text-align: center;
+    background-color: transparent;
+    text-transform: uppercase;
+
+}
+.fondo{
+    background-image: url("https://s2.best-wallpaper.net/wallpaper/2880x1800/1701/Ushuaia-Argentina-city-ships-ports-mountains_2880x1800.jpg");
+    height: max-content;
+    width: 100%;
+    background-size: cover;
+    position: relative;
+
+}
+.fondo:before{
+   content:"";
+    height: 100%;
+    width: 100%;
+    background-color: green;
+    position: absolute;
+    opacity: 0.3;
+
+
+}
+.textoBean{
+
+    width: 100%;
+    height: 100%;
+    background-color: whitesmoke;
+    opacity: 0.9;
+    padding: 10px;
+    color: black;
+
+
+
+
 }
 
+.texto{
+    border: 2px solid grey;
+    border-radius: 5px;
+    content:"";
+    height: 100%;
+    width: 100%;
+    background-color: green;
+    opacity: 0.9;
+}
+
+.searchbar{
+    margin-bottom: auto;
+    margin-top: auto;
+    height: 60px;
+    background-color: #353b48;
+    border-radius: 30px;
+    padding: 10px;
+}
+
+.search_input{
+    color: white;
+    border: 0;
+    outline: 0;
+    background: none;
+    width: 0;
+    caret-color:transparent;
+    line-height: 40px;
+    transition: width 0.4s linear;
+}
+
+.searchbar:hover > .search_input{
+    padding: 0 10px;
+    width: 450px;
+    caret-color:red;
+    transition: width 0.4s linear;
+}
+
+.searchbar:hover > .search_icon{
+    background: white;
+    color: #e74c3c;
+}
+
+.search_icon{
+    height: 40px;
+    width: 40px;
+    float: right;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    color:white;
+}
 .content h1 {
     border-bottom: 1px solid #CCCCCC;
     margin: 0.8em 1em 0.3em;
     padding: 0 0.25em;
+
 }
 
 .scaffold-list h1 {
@@ -499,7 +605,8 @@ th:hover, tr:hover {
     -webkit-box-shadow: 0 0 3px 1px #aaaaaa;
     box-shadow: 0 0 3px 1px #aaaaaa;
     margin: 0.1em 0 0 0;
-    border: none;
+    border: 2px solid;
+    border-radius: 5px;
 }
 
 .buttons input,
@@ -571,4 +678,62 @@ a.skip {
 img.grails-logo {
     height:340px;
     margin-top:-10px;
+}
+/* Add a black background color to the top navigation */
+.topnav {
+
+    background-color: #4D8618;
+    overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+    float: right;
+    display: block;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+
+    background-color: #4D8618;
+    color: #4D8618;
+}
+
+/* Add an active class to highlight the current page */
+.active {
+    background-color: #4CAF50;
+    color: white;
+}
+
+/* Hide the link that should open and close the topnav on small screens */
+.topnav .icon {
+    display: none;
+}
+/* When the screen is less than 600 pixels wide, hide all links, except for the first one ("Home"). Show the link that contains should open and close the topnav (.icon) */
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+        float: right;
+        display: block;
+    }
+}
+
+/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+@media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive a.icon {
+        position: absolute;
+        right: 0;
+        top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
 }
