--- a/grails-app/assets/stylesheets/main.css
+++ b/grails-app/assets/stylesheets/main.css
@@ -95,7 +95,7 @@ img {
 
 }
 .fondo{
-    background-image: url("https://s2.best-wallpaper.net/wallpaper/2880x1800/1701/Ushuaia-Argentina-city-ships-ports-mountains_2880x1800.jpg");
+    background-image: url("../images/Ushuaia-Argentina-city-ships-ports-mountains_2880x1800.jpg");
     height: max-content;
     width: 100%;
     background-size: cover;
